# distributed-cache-sidecar

./: Cargo.toml  Dockerfile  README.md  build.rs
src/: cache.rs  config.rs  driver.rs  event_listener.rs  fallback.rs  hashing.rs  main.rs  monitoring.rs  pod_discovery.rs  replication.rs  search_index.rs  security.rs  transaction_manager.rs
src/proto/: cache.proto
src/web_dashboard/: app.js  index.html  styles.css
src/web_dashboard/components/: CacheSearch.vue  Configuration.vue  cache_stats.vue  footer.vue  header.vue  transaction_manager.vue
