[package]
name = "distributed-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"
prost-types = "0.12"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1.4"
dashmap = "5.4"
async-trait = "0.1.83"
redis = { version = "0.23.3", features = ["aio", "tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
kube = { version = "0.87.2", default-features = false, features = [
    "runtime",
    "derive",
    "client",
    "config",
] }
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
lz4 = "1.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tantivy = "0.19"
warp = "0.3"
prometheus = "0.13"
jsonwebtoken = "8.3.0"
parking_lot = "0.12"
uuid = { version = "1.3", features = ["v4"] }
crossbeam = "0.8"
serde_yaml = "0.9"
anyhow = "1.0"
lazy_static = "1.4"

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.10"
protoc-bin-vendored = "3.1.0"

[features]
monitoring = []
